manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "testuwkcsb-5c0a"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "testuwkcsb-5c0a"
  template:
    metadata:
      labels:
        app: "testuwkcsb-5c0a"
    spec:
      containers:
        - name: "testuwkcsb-5c0a"
          image: "testuwacrsb.azurecr.io/testuwkcsb"
          ports:
          - containerPort: 80
