manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "springboottest-ingress"
    labels:
        app: "springboottest-ingress"
    annotations:
        appgw.ingress.kubernetes.io/use-private-ip: "false" 
        kubernetes.io/ingress.class: azure/application-gateway
        nginx.ingress.kubernetes.io/rewrite-target: /
       
spec:
    rules:
        - host: test-uw-kc-sbaaaa-testuwkcsb-5c0a.07c4576f8d8c4eccb031.westus.aksapp.io
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                serviceName: "springboottest"
                servicePort: 8080
